// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bugfix.spec 2023-03-31T04:00:00+00:00 1`] = `
{
  "format": "2023-03-31T04:00:00Z",
  "format2": "2023-03-31T12:00:00+08:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T04:00:00.000Z 1`] = `
{
  "format": "2023-03-31T04:00:00Z",
  "format2": "2023-03-31T12:00:00+08:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T04:00:00.800Z 1`] = `
{
  "format": "2023-03-31T04:00:00Z",
  "format2": "2023-03-31T12:00:00+08:00",
  "toISOString": "2023-03-31T04:00:00.800Z",
  "toJSON": "2023-03-31T04:00:00.800Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T12:00:00 1`] = `
{
  "format": "2023-03-31T04:00:00Z",
  "format2": "2023-03-31T12:00:00+08:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;

exports[`bugfix.spec 2023-03-31T12:00:00+08:00 1`] = `
{
  "format": "2023-03-31T04:00:00Z",
  "format2": "2023-03-31T12:00:00+08:00",
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
}
`;
